
  [ Translations of debconf templates ]
    - Updated Lithuanian translation. (Kęstutis Biliūnas)

  [ Translations of tasks ]
    - Updated Lithuanian translation. (Kęstutis Biliūnas)

  [ Translations of programs ]
    - Updated Lithuanian translation. (Kęstutis Biliūnas)

  [ Joey Hess ]
  * Uncomment the now-available sa-exim in mail server task.
  * Add cpufrequtils to laptop.

 -- Joey Hess <joeyh@debian.org>  Thu, 29 Dec 2005 07:14:56 -0500

tasksel (2.38) unstable; urgency=low

  * mozilla-firefox is being renamed to firefox. Added firefox but left the
    mozilla-firefox package in for now, until firefox reaches testing.
  * mozilla-psm is not needed for firefox so removed it from the desktop task

  [ Translations of debconf templates ]
  * Polish updated. Closes: #344140
  * Greek updated.
  * Italian updated. Closes: #344669

  [ Translations of tasks ]
  * Polish updated. Closes: #344140
  * Greek updated.

  [ Translations of programs ]
  * Vietnamese updated. Closes: #343848
  * Polish updated. Closes: #344140
  * Greek updated.

  [ Joey Hess ]
  * When running aptitude in debconf-apt-progress, pass -q to it to disable
    incremental progress displays being logged to stderr, since eg in d-i that
    results in a lot (possibly many megabytes) of download progress info in
    the logs.
  * Support backing up from tasksel if it is run as part of a larger
    debconf-using program such as d-i; while tasksel will not enable the
    backup capb itself, if it is enabled and the user chooses to back up, it
    will exit with code 10. Note that this code, rather than 30, was chosen
    to interoperate with d-i, which rather inexplicably uses 10 instead of 30
    to signal backup across process boundries.

 -- Joey Hess <joeyh@debian.org>  Sun, 25 Dec 2005 17:19:07 -0500

tasksel (2.37) unstable; urgency=low

  * In debconf test, also test for DEBCONF_READFD being set, to detect when
    tasksel is being run with a passthrough debconf frontend configured,
