@@ -1,6 +1,3 @@
-This package was debianized by Randolph Chung <tausq@debian.org> on
-Wed,  8 Dec 1999 21:41:46 -0700.
-
-Upstream Authors: Randolph Chung and Joey Hess
+Authors: Randolph Chung and Joey Hess
 
 Copyright: GPLv2, see /usr/share/common-licenses/GPL
