@@ -12,8 +12,12 @@ tasksel (2.39) UNRELEASED; urgency=low
   [ Joey Hess ]
   * Uncomment the now-available sa-exim in mail server task.
   * Add cpufrequtils to laptop.
+  * Add support for preinst, postinst, prerm and postrm scripts for tasks.
+  * Add preinst script for desktop task, to install read-edid and mdetect
+    for X server autoconfiguration.
+  * Clean up executation of commands.
 
- -- Joey Hess <joeyh@debian.org>  Thu, 29 Dec 2005 07:14:56 -0500
+ -- Joey Hess <joeyh@debian.org>  Mon,  2 Jan 2006 15:09:12 -0500
 
 tasksel (2.38) unstable; urgency=low
 
